[project]
name = "pdesy"
version = "0.6.0"
description = "pDESy: Discrete Event Simulation of Python"
authors = [
    {name = "Taiga MITSUYUKI",email = "mitsuyuki-taiga-my@ynu.ac.jp"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx (>=3.4.2,<4.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "kaleido (==0.2.1)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
]

[tool.poetry]
packages = [
    {include = "pDESy"},
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "^7.2.0"
autopep8 = "^2.3.2"
black = "^25.1.0"
pytest-cov = "^6.1.1"

